# WindyLab-RobotArmControl

./: .gitignore  LICENSE  README.md  STUDENT_GUIDE.md  nx_arm_demo.sh  nx_arm_launch.sh  nx_arm_launch_rviz.sh  nx_arm_launch_sim.sh  nx_arm_record_demo.sh  nx_real_arm_setup.sh  pc_arm_demo.sh  pc_arm_launch.sh  pc_arm_launch_rviz.sh  pc_arm_launch_sim.sh  pc_arm_record_demo.sh  pc_real_arm_setup.sh  run_ee_stabilization.sh  run_ee_stabilization_hw.sh  详细使用手册.md
projects/: README.md
projects/circle-draw/: README.md  hw_observe.rviz  observe_hw.sh  record_hw.sh  run_hw.sh  run_sim.sh
projects/ee-stabilization-vicon/: README.md  run_hw.sh  run_hw_mit_traj.sh  run_hw_mit_traj_boot.sh  run_limit_test.sh  (+5 more)
run_data/: analysis_report.md
scripts/: claim_arm_serial.sh  nx_arm_env.sh  resolve_arm_port.sh
windylab_ws/src/arm-platform/: .dockerignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
windylab_ws/src/arm-platform/config/: arm.urdf  arm_config.yaml  camera.yaml  motor_config.yaml  stabilization_hw_student_arm.yaml  student_arm.rviz
windylab_ws/src/arm-platform/debian/: postinst  prerm
windylab_ws/src/arm-platform/demo/: move_arm_demo.py  move_arm_ik_demo.py  move_arm_line_demo.py  pinocchio_ik.py  rotate_link5_right_90.py
windylab_ws/src/arm-platform/docker/: Dockerfile.verify  README.md  build.sh
windylab_ws/src/arm-platform/include/manipulator/: common_types.h
windylab_ws/src/arm-platform/include/manipulator/collision/: aabb.h  collision_avoidance.h
windylab_ws/src/arm-platform/include/manipulator/controller/: gravity_controller.h  i_arm_controller.h  mit_stabilization_controller.h  smooth_position_controller.h
windylab_ws/src/arm-platform/include/manipulator/perception/: sensor_data.h
windylab_ws/src/arm-platform/include/manipulator/perception/perception/: detector.h  i_perception.h  mapper.h  state_estimator.h
windylab_ws/src/arm-platform/include/manipulator/perception/sensor/: abs_sensor.h  i_sensor.h  mid360.h  usb_camera.h
windylab_ws/src/arm-platform/include/manipulator/planning/: abs_motion_planner.h  reset_motion_planner.h
windylab_ws/src/arm-platform/include/manipulator/planning/trajectory/: i_trajectory_generator.h  scurve_generator.h
windylab_ws/src/arm-platform/include/manipulator/robotics/: arm_data_subscriber.h  arm_platform.h
windylab_ws/src/arm-platform/include/manipulator/robotics/arm/: a_l1.h  a_l1_gamma.h  abs_arm.h  arm_factory.h  i_arm.h  sim_arm.h
windylab_ws/src/arm-platform/include/manipulator/robotics/bus/: abs_bus.h  i_bus.h  serial_bus.h
windylab_ws/src/arm-platform/include/manipulator/robotics/config/: arm_config.h
windylab_ws/src/arm-platform/include/manipulator/robotics/motor/: abs_motor.h  dm_motor.h  i_motor.h
windylab_ws/src/arm-platform/include/manipulator/robotics/protocol/: abs_protocol.h  i_protocol.h  protocol_factory.h  protocol_v1.h
windylab_ws/src/arm-platform/include/manipulator/ros_nodes/: arm_hardware_node.h  master_arm_node.h  robot_health_aggregator.h  slave_arm_node.h  student_arm_node.h
windylab_ws/src/arm-platform/launch/: camera.launch.py  demo.launch.py  lidar.launch.py  localization.launch.py  master_arm.launch.py  moveit2_arm.launch.py  slave_arm.launch.py  student_arm.launch.py
windylab_ws/src/arm-platform/scripts/: clean.sh  get_camera_ip.sh  get_livox_lidar_ip.sh  package_deb.sh  robot.service  set_camera_ip.sh  set_livox_lidar_ip.sh  start.sh  stop.sh
windylab_ws/src/arm-platform/src/: serial_test_node.cc
windylab_ws/src/arm-platform/src/collision/: collision_avoidance.cc
windylab_ws/src/arm-platform/src/controller/: gravity_controller.cc  mit_stabilization_controller.cc  smooth_position_controller.cc
windylab_ws/src/arm-platform/src/planning/: abs_motion_planner.cc  reset_motion_planner.cc
windylab_ws/src/arm-platform/src/robotics/: arm_platform.cc
windylab_ws/src/arm-platform/src/robotics/arm/: a_l1.cc  a_l1_gamma.cc  abs_arm.cc  arm_factory.cc  sim_arm.cc
windylab_ws/src/arm-platform/src/robotics/bus/: abs_bus.cc  serial_bus.cc
windylab_ws/src/arm-platform/src/robotics/config/: arm_config.cc
windylab_ws/src/arm-platform/src/robotics/motor/: abs_motor.cc  dm_motor.cc
windylab_ws/src/arm-platform/src/robotics/protocol/: abs_protocol.cc  dummy_link_protocol.cc  protocol_factory.cc  protocol_v1.cc
windylab_ws/src/arm-platform/src/ros_nodes/: arm_hardware_node.cc  flight_status_bridge.cc  master_arm_node.cc  robot_health_aggregator.cc  slave_arm_node.cc  student_arm_node.cc
windylab_ws/src/arm_ee_stabilization_control/: CMakeLists.txt  package.xml
windylab_ws/src/arm_ee_stabilization_control/config/: single_arm.urdf  stabilization.yaml  stabilization_hw_mode_a.yaml  stabilization_hw_mode_b.yaml  stabilization_hw_mode_c.yaml  stabilization_hw_mode_d.yaml  stabilization_hw_mode_e.yaml  stabilization_mode_d.yaml  stabilization_mode_e.yaml
windylab_ws/src/arm_ee_stabilization_control/include/: BaseDisturbanceGenerator.hpp  EeStabilizationNode.hpp  PinocchioDynamicsModel.hpp  PinocchioIkSolver.hpp  StabilizationModeD.hpp
windylab_ws/src/arm_ee_stabilization_control/src/: EeStabilizationNode.cpp  PinocchioDynamicsModel.cpp  PinocchioIkSolver.cpp  StabilizationModeD.cpp  ee_stabilization_node.cpp
windylab_ws/src/arm_ee_stabilization_description/: CMakeLists.txt  meshes  package.xml
windylab_ws/src/arm_ee_stabilization_description/launch/: stabilization.launch.py  stabilization_hardware.launch.py  stabilization_headless.launch.py
windylab_ws/src/arm_ee_stabilization_description/rviz/: stabilization.rviz
windylab_ws/src/arm_ee_stabilization_description/urdf/: arm_on_drone.urdf  single_arm.urdf
windylab_ws/src/arm_teleop_wbc_control/: CMakeLists.txt  package.xml
windylab_ws/src/arm_teleop_wbc_control/config/: wbc_default.yaml
windylab_ws/src/arm_teleop_wbc_control/include/: BoxQpSolver.hpp  PinocchioArmModel.hpp  TeleopWbcNode.hpp  VelocityWbcController.hpp
windylab_ws/src/arm_teleop_wbc_control/src/: BaseDisturbanceGenerator.cpp  BoxQpSolver.cpp  PinocchioArmModel.cpp  TeleopWbcNode.cpp  VelocityWbcController.cpp  teleop_wbc_node.cpp
(+284 files in other folders)
