<?xml version="1.0"?>
<package format="3">
  <name>arm_ee_stabilization_description</name>
  <version>0.1.0</version>
  <description>Drone-mounted A-L1-GAMMA arm URDF and RViz launch for EE stabilization.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
